<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ElementActivity">

    <Button
        android:id="@+id/callButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:onClick="onCallClick"
        android:text="@string/callButton"
        app:layout_constraintStart_toEndOf="@+id/telephoneLabel"
        app:layout_constraintTop_toTopOf="@+id/telephoneLabel" />

    <TextView
        android:id="@+id/telephoneLabel"
        android:layout_width="147dp"
        android:layout_height="34dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="64dp"
        android:text="@string/telephoneLabel"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameText1" />

    <TextView
        android:id="@+id/telephoneText"
        android:layout_width="290dp"
        android:layout_height="35dp"
        android:layout_marginTop="30dp"
        android:text="@string/telephoneText"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/telephoneLabel"
        app:layout_constraintTop_toBottomOf="@+id/telephoneLabel" />

    <TextView
        android:id="@+id/addressLabel"
        android:layout_width="139dp"
        android:layout_height="29dp"
        android:layout_marginTop="40dp"
        android:text="@string/addressLabel"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/telephoneLabel"
        app:layout_constraintTop_toBottomOf="@+id/telephoneText" />

    <TextView
        android:id="@+id/addressText"
        android:layout_width="307dp"
        android:layout_height="69dp"
        android:layout_marginTop="30dp"
        android:text="@string/addressText"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/addressLabel"
        app:layout_constraintTop_toBottomOf="@+id/addressLabel" />

    <Button
        android:id="@+id/toMapButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:onClick="onMapClick"
        android:text="@string/toMapButton"
        app:layout_constraintStart_toEndOf="@+id/addressLabel"
        app:layout_constraintTop_toTopOf="@+id/addressLabel" />

    <TextView
        android:id="@+id/nameText1"
        android:layout_width="176dp"
        android:layout_height="49dp"
        android:layout_marginTop="56dp"
        android:text="@string/nameText"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/nameText" />

</androidx.constraintlayout.widget.ConstraintLayout>